# RE-Converter

./: .gitignore  Cargo.toml  README.md
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: copiee.rs  exec.rs  lib.rs  state.rs  types.rs
crates/libs/lib-core/src/converter/: mod.rs  options.rs
crates/libs/lib-core/src/progress/: mod.rs  monitor.rs  system.rs  tracker.rs  types.rs
crates/libs/lib-sorter/: Cargo.toml
crates/libs/lib-sorter/src/: bucket.rs  error.rs  lib.rs  sinker.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: arg.rs  file.rs  lib.rs  time.rs
crates/services/: .gitignore
crates/services/video_converter/: .dccache  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
crates/services/video_converter/src/: App.css  App.tsx  appContext.tsx  index.tsx  main_component.tsx
crates/services/video_converter/src-tauri/: Cargo.toml  tauri.conf.json
crates/services/video_converter/src-tauri/capabilities/: default.json
crates/services/video_converter/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  progress.rs  test.rs  websocket_server.rs
crates/services/video_converter/src/components/: audio_codec.tsx  bitrateSetting.tsx  folder-selector.tsx  output_extension.tsx  picture_format.tsx  resolution.tsx  switch.tsx  switchToggle.tsx  video_codec.tsx
crates/services/video_converter/src/i18n/: en.ts  ja.ts  zh-tw.ts
crates/services/video_converter/src/lib/: config_singleton.ts  io_store.ts  ls_store.ts  types-backend.ts  types.ts  utils.ts  websocket_messages.ts
crates/services/video_converter_cli/: Cargo.toml  log.txt  log.txt~
crates/services/video_converter_cli/src/: main.rs
crates/services/video_converter_iced/: Cargo.toml
crates/services/video_converter_iced/src/: config.rs  main.rs
crates/services/video_converter_iced/src/assets/: mod.rs  svg.rs
crates/services/video_converter_iced/src/pages/: mod.rs  progress.rs  setup.rs
crates/services/video_converter_iced/src/pages/setup/: types.rs  validation.rs
crates/services/video_converter_iced/src/utils/: extensions.rs  mod.rs  view_helper.rs
crates/services/video_converter_iced/wix/: main.wxs
