[workspace]
resolver = "2"
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-sorter",
    "crates/libs/lib-utils",
    #    "crates/services/video_converter/src-tauri",
    "crates/services/video_converter_cli", "crates/services/video_converter_iced",
]

[workspace.dependencies]
lib-core = { path = "crates/libs/lib-core" }
lib-utils = { path = "crates/libs/lib-utils" }
lib-sorter = { path = "crates/libs/lib-sorter" }

tokio = { version = "1.46.1", features = ["full"] }
rust-embed = { version = "8.7.2", features = ["debug-embed", "interpolate-folder-path"] }
chrono = "0.4"
once_cell = "1.21.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"


[profile.release]
incremental = true
lto = "thin"