[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local deps
lib-sorter = { workspace = true }
lib-utils = { workspace = true }

# External deps
tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
typeshare = "1.0.0"

futures = "0.3.31"

tracing = { workspace = true, features = ["attributes"] }