[package]
name = "video_converter_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
rust-embed = { workspace = true, features = ["debug-embed", "interpolate-folder-path"] }

indicatif = "0.18.0"
once_cell = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"

lib-core = { workspace = true }

[[bin]]
name = "reconv"
path = "src/main.rs"