[package]
name = "video_converter_iced"
version = "0.1.0"
edition = "2024"
authors = ["TodayNightt"]
license = "GPL-3"


[dependencies]
iced = { version = "0.13.1", features = ["svg", "image", "tokio"] }
rfd = "0.15.3"
rust-embed = { workspace = true, features = ["interpolate-folder-path", "debug-embed"] }
tokio = { workspace = true, features = ["sync"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
image = "0.24.9"
once_cell = { workspace = true }
lib-core = { workspace = true }

chrono = { workspace = true }

directories = "5.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }


[features]
embedded = []

[[bin]]
path = "src/main.rs"
name = "reconv_ui"
